@@ -19,6 +19,7 @@ import com.google.inject.Inject;
 import io.trino.Session;
 import io.trino.connector.CatalogHandle;
 import io.trino.execution.warnings.WarningCollector;
+import io.trino.metadata.Canonicalizer;
 import io.trino.metadata.ColumnPropertyManager;
 import io.trino.metadata.QualifiedObjectName;
 import io.trino.metadata.RedirectionAwareTableHandle;
@@ -48,7 +49,6 @@ import java.util.Map;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
-import static com.google.common.collect.Iterables.getLast;
 import static com.google.common.collect.Iterables.getOnlyElement;
 import static com.google.common.util.concurrent.Futures.immediateVoidFuture;
 import static io.trino.execution.ParameterExtractor.bindParameters;
@@ -66,7 +66,6 @@ import static io.trino.sql.analyzer.ExpressionAnalyzer.analyzeDefaultColumnValue
 import static io.trino.sql.analyzer.SemanticExceptions.semanticException;
 import static io.trino.sql.analyzer.TypeSignatureTranslator.toTypeSignature;
 import static io.trino.type.UnknownType.UNKNOWN;
-import static java.util.Locale.ENGLISH;
 import static java.util.Objects.requireNonNull;
 import static java.util.function.Function.identity;
 
@@ -99,8 +98,10 @@ public class AddColumnTask
             WarningCollector warningCollector)
     {
         Session session = stateMachine.getSession();
+        QualifiedObjectName originalTableName = createQualifiedObjectName(session, statement, statement.getName(), plannerContext.getMetadata());
+        Canonicalizer canonicalizer = plannerContext.getMetadata().getCanonicalizer(session, originalTableName.catalogName());
+        statement.getName().canonicalizeColumn(canonicalizer::canonicalize, canonicalizer::canonicalizeColumn);
         Map<NodeRef<Parameter>, Expression> parameterLookup = bindParameters(statement, parameters);
-        QualifiedObjectName originalTableName = createQualifiedObjectName(session, statement, statement.getName());
         RedirectionAwareTableHandle redirectionAwareTableHandle = plannerContext.getMetadata().getRedirectionAwareTableHandle(session, originalTableName);
         if (redirectionAwareTableHandle.tableHandle().isEmpty()) {
             if (!statement.isTableExists()) {
@@ -115,10 +116,10 @@ public class AddColumnTask
 
         TableMetadata tableMetadata = plannerContext.getMetadata().getTableMetadata(session, tableHandle);
         Map<String, ColumnMetadata> columns = tableMetadata.columns().stream()
-                .collect(toImmutableMap(ColumnMetadata::getName, identity()));
+                .collect(toImmutableMap(metadata -> canonicalizer.compareColumn(metadata.getName()), identity()));
 
         ColumnDefinition element = statement.getColumn();
-        Identifier columnName = element.getName().getOriginalParts().get(0);
+        String columnName = element.getName().canonicalizeColumn(canonicalizer::canonicalizeColumn).getOriginalParts().getFirst().getCanonicalizedValue();
         ColumnPosition position = statement.getPosition().orElse(new ColumnPosition.Last());
         Type type;
         try {
@@ -134,9 +135,9 @@ public class AddColumnTask
             if (type.equals(UNKNOWN)) {
                 throw semanticException(COLUMN_TYPE_UNKNOWN, element, "Unknown type '%s' for column '%s'", element.getType(), columnName);
             }
-            if (columns.containsKey(columnName.getValue().toLowerCase(ENGLISH))) {
+            if (columns.containsKey(canonicalizer.compareColumn(columnName))) {
                 if (!statement.isColumnNotExists()) {
-                    throw semanticException(COLUMN_ALREADY_EXISTS, statement, "Column '%s' already exists", columnName);
+                    throw semanticException(COLUMN_ALREADY_EXISTS, statement, "Column '%s' already exists", canonicalizer.compareColumn(columnName));
                 }
                 return immediateVoidFuture();
             }
@@ -146,8 +147,11 @@ public class AddColumnTask
             if (!element.isNullable() && !plannerContext.getMetadata().getConnectorCapabilities(session, catalogHandle).contains(NOT_NULL_COLUMN_CONSTRAINT)) {
                 throw semanticException(NOT_SUPPORTED, element, "Catalog '%s' does not support NOT NULL for column '%s'", catalogHandle, columnName);
             }
-            if (position instanceof ColumnPosition.After after && !columns.containsKey(after.column().getValue().toLowerCase(ENGLISH))) {
-                throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not", after.column().getValue());
+            if (position instanceof ColumnPosition.After(Identifier after)) {
+                String afterColumn = after.setCanonicalizer(canonicalizer::canonicalizeColumn).getCanonicalizedValue();
+                if (!columns.containsKey(canonicalizer.compareColumn(afterColumn))) {
+                    throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", after.getValue());
+                }
             }
 
             Map<String, Object> columnProperties = columnPropertyManager.getProperties(
@@ -163,7 +167,7 @@ public class AddColumnTask
             Type supportedType = getSupportedType(session, catalogHandle, tableMetadata.metadata().getProperties(), type);
             element.getDefaultValue().ifPresent(value -> analyzeDefaultColumnValue(session, plannerContext, accessControl, parameterLookup, warningCollector, supportedType, value));
             ColumnMetadata column = ColumnMetadata.builder()
-                    .setName(columnName.getValue())
+                    .setName(columnName)
                     .setType(supportedType)
                     .setDefaultValue(element.getDefaultValue().map(Expression::toString))
                     .setNullable(element.isNullable())
@@ -176,12 +180,12 @@ public class AddColumnTask
                     tableHandle,
                     qualifiedTableName.asCatalogSchemaTableName(),
                     column,
-                    toConnectorColumnPosition(position));
+                    toConnectorColumnPosition(position, canonicalizer));
         }
         else {
             accessControl.checkCanAlterColumn(session.toSecurityContext(), qualifiedTableName);
 
-            if (!columns.containsKey(columnName.getValue().toLowerCase(ENGLISH))) {
+            if (!columns.containsKey(canonicalizer.compareColumn(columnName))) {
                 throw semanticException(COLUMN_NOT_FOUND, statement, "Column '%s' does not exist", columnName);
             }
             if (!(position instanceof ColumnPosition.Last)) {
@@ -190,13 +194,13 @@ public class AddColumnTask
             }
 
             List<String> parentPath = statement.getColumn().getName().getOriginalParts().subList(0, statement.getColumn().getName().getOriginalParts().size() - 1).stream()
-                    .map(identifier -> identifier.getValue().toLowerCase(ENGLISH))
+                    .map(Identifier::getCanonicalizedValue)
                     .collect(toImmutableList());
             List<String> fieldPath = statement.getColumn().getName().getOriginalParts().subList(1, statement.getColumn().getName().getOriginalParts().size()).stream()
-                    .map(Identifier::getValue)
+                    .map(Identifier::getCanonicalizedValue)
                     .collect(toImmutableList());
 
-            ColumnMetadata columnMetadata = columns.get(columnName.getValue().toLowerCase(ENGLISH));
+            ColumnMetadata columnMetadata = columns.get(canonicalizer.compareColumn(columnName));
             Type currentType = columnMetadata.getType();
             for (int i = 0; i < fieldPath.size() - 1; i++) {
                 String fieldName = fieldPath.get(i);
@@ -215,7 +219,7 @@ public class AddColumnTask
                 throw new TrinoException(NOT_SUPPORTED, "Unsupported type: " + currentType);
             }
 
-            String fieldName = getLast(statement.getColumn().getName().getParts());
+            String fieldName = statement.getColumn().getName().getOriginalParts().getLast().getCanonicalizedValue();
             List<RowType.Field> candidates = getCandidates(currentType, fieldName);
 
             if (!candidates.isEmpty()) {
@@ -263,11 +267,11 @@ public class AddColumnTask
                 .orElse(type);
     }
 
-    private static io.trino.spi.connector.ColumnPosition toConnectorColumnPosition(ColumnPosition columnPosition)
+    private static io.trino.spi.connector.ColumnPosition toConnectorColumnPosition(ColumnPosition columnPosition, Canonicalizer canonicalizer)
     {
         return switch (columnPosition) {
             case ColumnPosition.First _ -> new First();
-            case ColumnPosition.After after -> new After(after.column().getValue().toLowerCase(ENGLISH));
+            case ColumnPosition.After after -> new After(canonicalizer.canonicalizeColumn(after.column()));
             case ColumnPosition.Last _ -> new Last();
         };
     }
